Bug 169506 nsLocalFileUnix have problems with BeOS. IsExecutable()... patch by thesuckiestemail@yahoo.se r=sergei_d moa=dougt